#fixed footer height and navbar text size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -260,3 +260,8 @@ body {
   transform: translateZ(0);
   will-change: transform;
 }
+
+.contactScreen {
+height:  80vh;
+
+}
